Google form embed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+<style>
+    iframe{
+        overflow:hidden;
+        -webkit-transform: scale(0.9);
+        -webkit-transform-origin: 0 0;
+    }
+</style>
 </head>
 <body>
 
@@ -921,8 +927,8 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" placeholder="Subject" id="msg_subject" class="form-control"
-                                           required data-error="Please enter your subject">
+                                    <input type="text" placeholder="Company Name" id="msg_subject" class="form-control"
+                                           required data-error="Please enter your Company">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -941,6 +947,7 @@
                         </div>
                     </form>
                 </div>-->
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/viewform?embedded=true" width="100%" height="350px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-12">
                 <div class="contact-right-area wow fadeIn">
@@ -948,7 +955,7 @@
                         <h1>We're a friendly bunch..</h1>
                         <p>We help create infrastructure for companies and startups</p>
                     </div>
-                    <h2>Contact Us</h2>
+<!--                    <h2>Contact Us</h2>-->
                     <div class="contact-right">
                         <!--<div class="single-contact">
                             <div class="contact-icon">
