Google form embed

--- a/index.html
+++ b/index.html
@@ -908,19 +908,19 @@
     <div class="container">
         <div class="row contact-form-area wow fadeInUp" data-wow-delay="0.4s">
             <div class="col-md-6 col-lg-6 col-sm-12">
-               <!-- <div class="contact-block">
-                    <form id="contactForm">
+              <!--  <div class="contact-block">
+                    <form id="contactForm2" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/formResponse">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name"
+                                    <input type="text" class="form-control" id="name" name="entry.627296906" placeholder="Name"
                                            required data-error="Please enter your name">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" placeholder="Email" id="email" class="form-control" name="email"
+                                    <input type="text" placeholder="Email" id="email" class="form-control" name="entry.727124915"
                                            required data-error="Please enter your email">
                                     <div class="help-block with-errors"></div>
                                 </div>
@@ -928,16 +928,16 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <input type="text" placeholder="Company Name" id="msg_subject" class="form-control"
-                                           required data-error="Please enter your Company">
+                                           required data-error="Please enter your Company" name="entry.287276731">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <div class="form-group">
-                                    <textarea class="form-control" id="message" placeholder="Your Message" rows="5"
-                                              data-error="Write your message" required></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+&lt;!&ndash;                                <div class="form-group">&ndash;&gt;
+&lt;!&ndash;                                    <textarea class="form-control" id="message" placeholder="Your Message" rows="5"&ndash;&gt;
+&lt;!&ndash;                                              data-error="Write your message" required></textarea>&ndash;&gt;
+&lt;!&ndash;                                    <div class="help-block with-errors"></div>&ndash;&gt;
+&lt;!&ndash;                                </div>&ndash;&gt;
                                 <div class="submit-button">
                                     <button class="btn btn-common" id="form-submit" type="submit">Send Message</button>
                                     <div id="msgSubmit" class="h3 text-center hidden"></div>
