--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 <style>
     iframe{
-        overflow:hidden;
-        -webkit-transform: scale(0.9);
-        -webkit-transform-origin: 0 0;
+       margin: -20px;
     }
 </style>
 </head>
@@ -41,7 +39,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="max-height: 45px"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="max-height: 40px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="lni-menu"></i>
