--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#feature">
-                            Feature
+                            Why us?
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">
-                            Services
+                            Features
                         </a>
                     </li>
                    <!-- <li class="nav-item">
@@ -132,7 +132,7 @@
                             business</h2>
                         <p class="mb-4">Do you feel that the ever increasing cloud foot-print is causing you to digress
                             from core business problems?</p>
-                        <a href="#services" class="btn btn-common">More About Us</a>
+                        <a href="#services" class="btn btn-common">See Features</a>
                     </div>
                 </div>
             </div>
