--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Facets.cloud - Managing all cloud Aspects</title>
+    <title>Facets.cloud - Covering all cloud aspects</title>
     <link rel="icon" type="image/x-icon" href="assets/img/fav.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -177,7 +177,7 @@
     <div class="container">
         <div class="section-header text-center">
             <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Facets.cloud</h2>
-            <p>Managing all cloud aspects</p>
+            <p>Covering all cloud aspects</p>
         </div>
         <div class="row">
             <!-- Services item -->
