--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Facets.cloud - Covering all cloud aspects</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/fav.png">
+    <link rel="icon" type="image/x-icon" href="assets/img/fav2.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Icon -->
