Adding Typeform instead of Google form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <link rel="stylesheet" href="assets/css/responsive.css"> 
 <style>
     iframe{
-       margin: -20px;
+       /*margin: -20px;*/
+        width: 100%;
+        height: 360px;
+        margin-top: -50px;
+        overflow: hidden;
     }
 </style>
 </head>
@@ -945,7 +949,24 @@
                         </div>
                     </form>
                 </div>-->
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/viewform?embedded=true" width="100%" height="350px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!--                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/viewform?embedded=true" width="100%" height="350px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
+                <div class="contact-title">
+                    <h1 style="      margin-bottom: 12px;  font-size: 22px;">Contact us</h1>
+                </div>
+                <div class="typeform-widget"
+                     data-url="https://form.typeform.com/to/KVmsZDJn?typeform-medium=embed-snippet"
+                     style="width: 100%; height: 330px;"></div>
+                <script> (function () {
+                    var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement,
+                        gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/";
+                    if (!gi.call(d, id)) {
+                        js = ce.call(d, "script");
+                        js.id = id;
+                        js.src = b + "embed.js";
+                        q = gt.call(d, "script")[0];
+                        q.parentNode.insertBefore(js, q)
+                    }
+                })() </script>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-12">
                 <div class="contact-right-area wow fadeIn">
