--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- Header Area wrapper Starts -->
 <header id="header-wrap">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar" style="    height: 72px;">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="max-height: 40px"></a>
