--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Facets.cloud - Covering all cloud aspects</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/fav2.png">
+    <link rel="icon" type="image/x-icon" href="assets/img/fav.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Icon -->
@@ -43,7 +42,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar" style="    height: 72px;">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="max-height: 40px"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/img/logo_blue.png" alt="" style="max-height: 45px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="lni-menu"></i>
@@ -107,8 +106,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="contents text-center">
-                        <h2 class="head-title wow fadeInUp">Expert Devops tool <br/> covering all facets of cloud
-                            management</h2>
+                        <h2 class="head-title wow fadeInUp">The one single DevOps tool <br/> to manage all of your cloud infrastructure</h2>
                         <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                             <a href="#services" class="btn btn-common">Explore</a>
                         </div>
@@ -132,40 +130,37 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="text-wrapper">
                     <div>
-                        <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">We help you focus <br/> on your
-                            business</h2>
-                        <p class="mb-4">Do you feel that the ever increasing cloud foot-print is causing you to digress
-                            from core business problems?</p>
+                        <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">Be in control of your <br/>cloud footprint</h2>
+                        <p class="mb-4">Our solution takes care of increasing complexity so you can focus on your business.</p>
+
                         <a href="#services" class="btn btn-common">See Features</a>
+
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg">
+            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg" style="zoom:1.2">
                 <div class="feature-thumb">
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                        <div class="icon">
-                            <i class="lni-microphone"></i>
-                        </div>
+<!--                        <div class="icon">-->
+<!--                            <i class="lni-microphone"></i>-->
+<!--                        </div>-->
                         <div class="feature-content">
-                            <h3>Agile</h3>
                             <p>Lack of talent in the market is a barrier for rapid infrastructure changes ? </p>
                         </div>
                     </div>
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-                        <div class="icon">
-                            <i class="lni-users"></i>
-                        </div>
+<!--                        <div class="icon">-->
+<!--                            <i class="lni-users"></i>-->
+<!--                        </div>-->
                         <div class="feature-content">
-                            <h3>Focus</h3>
                             <p>Developer productivity is hampered because of maintenance of infrastructure? </p>
                         </div>
                     </div>
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="700ms">
-                        <div class="icon">
-                            <i class="lni-medall-alt"></i>
-                        </div>
+<!--                        <div class="icon">-->
+<!--                            <i class="lni-medall-alt"></i>-->
+<!--                        </div>-->
                         <div class="feature-content">
-                            <h3>Vigilant</h3>
                             <p>Observability and Security has become an afterthought in the growing complexity? </p>
                         </div>
                     </div>
