--- a/index.html
+++ b/index.html
@@ -138,28 +138,28 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg" style="zoom:1.2">
+            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg" >
                 <div class="feature-thumb">
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-<!--                        <div class="icon">-->
-<!--                            <i class="lni-microphone"></i>-->
-<!--                        </div>-->
+                        <div class="icon">
+                            <i class="lni-microphone"></i>
+                        </div>
                         <div class="feature-content">
                             <p>Lack of talent in the market is a barrier for rapid infrastructure changes ? </p>
                         </div>
                     </div>
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-<!--                        <div class="icon">-->
-<!--                            <i class="lni-users"></i>-->
-<!--                        </div>-->
+                        <div class="icon">
+                            <i class="lni-users"></i>
+                        </div>
                         <div class="feature-content">
                             <p>Developer productivity is hampered because of maintenance of infrastructure? </p>
                         </div>
                     </div>
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="700ms">
-<!--                        <div class="icon">-->
-<!--                            <i class="lni-medall-alt"></i>-->
-<!--                        </div>-->
+                        <div class="icon">
+                            <i class="lni-medall-alt"></i>
+                        </div>
                         <div class="feature-content">
                             <p>Observability and Security has become an afterthought in the growing complexity? </p>
                         </div>
