--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                             Contact
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/docs/#/">
+                            Documentation
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
