--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/docs/#/">
+                        <a class="nav-link" href="/docs_old/#/">
                             Documentation
                         </a>
                     </li>
