Documentation theme change

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/docs_old/#/">
+                        <a class="nav-link" href="/site/">
                             Documentation
                         </a>
                     </li>
@@ -296,8 +296,8 @@
             <div class="col-sm-6 col-md-6 col-lg-3">
                 &lt;!&ndash; Team Item Starts &ndash;&gt;
                 <div class="team-item text-center wow fadeInRight" data-wow-delay="0.3s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/team-01.png" alt="">
+                    <div class="team-assets">
+                        <assets class="assets-fluid" src="assets/assets/team/team-01.png" alt="">
                         <div class="team-overlay">
                             <div class="overlay-social-icon text-center">
                                 <ul class="social-icons">
@@ -318,8 +318,8 @@
             <div class="col-sm-6 col-md-6 col-lg-3">
                 &lt;!&ndash; Team Item Starts &ndash;&gt;
                 <div class="team-item text-center wow fadeInRight" data-wow-delay="0.6s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/team-02.png" alt="">
+                    <div class="team-assets">
+                        <assets class="assets-fluid" src="assets/assets/team/team-02.png" alt="">
                         <div class="team-overlay">
                             <div class="overlay-social-icon text-center">
                                 <ul class="social-icons">
@@ -341,8 +341,8 @@
             <div class="col-sm-6 col-md-6 col-lg-3">
                 &lt;!&ndash; Team Item Starts &ndash;&gt;
                 <div class="team-item text-center wow fadeInRight" data-wow-delay="0.9s">
-                    <div class="team-img">
-                        <img class="img-fluid" src="assets/img/team/team-03.png" alt="">
+                    <div class="team-assets">
+                        <assets class="assets-fluid" src="assets/assets/team/team-03.png" alt="">
                         <div class="team-overlay">
                             <div class="overlay-social-icon text-center">
                                 <ul class="social-icons">
@@ -501,7 +501,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.3s">
-                <img class="img-fluid" src="assets/img/about/img-1.jpg" alt="">
+                <assets class="assets-fluid" src="assets/assets/about/assets-1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-xs-12 info wow fadeInRight" data-wow-delay="0.3s">
                 <div class="site-heading">
@@ -579,12 +579,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix development print">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-1.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-1.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-1.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-1.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">Creative Design</a>
@@ -597,12 +597,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix design print">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-2.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-2.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-2.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-2.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">Retina Ready</a>
@@ -615,12 +615,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix development">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-3.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-3.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-3.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-3.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">Responsive</a>
@@ -633,12 +633,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix development design">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-4.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-4.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-4.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-4.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">Well Documented</a>
@@ -651,12 +651,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix development">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-5.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-5.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-5.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-5.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">Customer Support</a>
@@ -669,12 +669,12 @@
             <div class="col-lg-4 col-md-6 col-xs-12 mix print design">
                 <div class="portfolio-item">
                     <div class="shot-item">
-                        <img src="assets/img/portfolio/img-6.jpg" alt=""/>
+                        <assets src="assets/assets/portfolio/assets-6.jpg" alt=""/>
                         <div class="single-content">
                             <div class="fancy-table">
                                 <div class="table-cell">
                                     <div class="zoom-icon">
-                                        <a class="lightbox" href="assets/img/portfolio/img-6.jpg"><i
+                                        <a class="lightbox" href="assets/assets/portfolio/assets-6.jpg"><i
                                                 class="lni-eye item-icon"></i></a>
                                     </div>
                                     <a href="#">User Friendly</a>
@@ -699,8 +699,8 @@
                 <div id="testimonials" class="owl-carousel wow fadeInUp" data-wow-delay="1.2s">
                     <div class="item">
                         <div class="testimonial-item">
-                            <div class="img-thumb">
-                                <img src="assets/img/testimonial/img1.jpg" alt="">
+                            <div class="assets-thumb">
+                                <assets src="assets/assets/testimonial/img1.jpg" alt="">
                             </div>
                             <div class="info">
                                 <h2><a href="#">Grenchen Pearce</a></h2>
@@ -716,8 +716,8 @@
                     </div>
                     <div class="item">
                         <div class="testimonial-item">
-                            <div class="img-thumb">
-                                <img src="assets/img/testimonial/img2.jpg" alt="">
+                            <div class="assets-thumb">
+                                <assets src="assets/assets/testimonial/img2.jpg" alt="">
                             </div>
                             <div class="info">
                                 <h2><a href="#">Domeni GEsson</a></h2>
@@ -733,8 +733,8 @@
                     </div>
                     <div class="item">
                         <div class="testimonial-item">
-                            <div class="img-thumb">
-                                <img src="assets/img/testimonial/img3.jpg" alt="">
+                            <div class="assets-thumb">
+                                <assets src="assets/assets/testimonial/img3.jpg" alt="">
                             </div>
                             <div class="info">
                                 <h2><a href="#">Dommini Albert</a></h2>
@@ -750,8 +750,8 @@
                     </div>
                     <div class="item">
                         <div class="testimonial-item">
-                            <div class="img-thumb">
-                                <img src="assets/img/testimonial/img4.png" alt="">
+                            <div class="assets-thumb">
+                                <assets src="assets/assets/testimonial/img4.png" alt="">
                             </div>
                             <div class="info">
                                 <h2><a href="#">Fernanda Anaya</a></h2>
@@ -767,8 +767,8 @@
                     </div>
                     <div class="item">
                         <div class="testimonial-item">
-                            <div class="img-thumb">
-                                <img src="assets/img/testimonial/img5.png" alt="">
+                            <div class="assets-thumb">
+                                <assets src="assets/assets/testimonial/img5.png" alt="">
                             </div>
                             <div class="info">
                                 <h2><a href="#">Jason A.</a></h2>
@@ -803,9 +803,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 blog-item">
                 &lt;!&ndash; Blog Item Starts &ndash;&gt;
                 <div class="blog-item-wrapper wow fadeInLeft" data-wow-delay="0.3s">
-                    <div class="blog-item-img">
+                    <div class="blog-item-assets">
                         <a href="single-post.html">
-                            <img src="assets/img/blog/img1.jpg" alt="">
+                            <assets src="assets/assets/blog/img1.jpg" alt="">
                         </a>
                     </div>
                     <div class="blog-item-text">
@@ -825,9 +825,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 blog-item">
                 &lt;!&ndash; Blog Item Starts &ndash;&gt;
                 <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="blog-item-img">
+                    <div class="blog-item-assets">
                         <a href="single-post.html">
-                            <img src="assets/img/blog/img2.jpg" alt="">
+                            <assets src="assets/assets/blog/img2.jpg" alt="">
                         </a>
                     </div>
                     <div class="blog-item-text">
@@ -847,9 +847,9 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 blog-item">
                 &lt;!&ndash; Blog Item Starts &ndash;&gt;
                 <div class="blog-item-wrapper wow fadeInRight" data-wow-delay="0.3s">
-                    <div class="blog-item-img">
+                    <div class="blog-item-assets">
                         <a href="single-post.html">
-                            <img src="assets/img/blog/img3.jpg" alt="">
+                            <assets src="assets/assets/blog/img3.jpg" alt="">
                         </a>
                     </div>
                     <div class="blog-item-text">
@@ -882,22 +882,22 @@
         <div class="row text-align-">
             <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="client-item-wrapper">
-                    <img class="img-fluid" src="assets/img/clients/img1.png" alt="">
+                    <assets class="assets-fluid" src="assets/assets/clients/img1.png" alt="">
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="client-item-wrapper">
-                    <img class="img-fluid" src="assets/img/clients/img2.png" alt="">
+                    <assets class="assets-fluid" src="assets/assets/clients/img2.png" alt="">
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.9s">
                 <div class="client-item-wrapper">
-                    <img class="img-fluid" src="assets/img/clients/img3.png" alt="">
+                    <assets class="assets-fluid" src="assets/assets/clients/img3.png" alt="">
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="1.2s">
                 <div class="client-item-wrapper">
-                    <img class="img-fluid" src="assets/img/clients/img4.png" alt="">
+                    <assets class="assets-fluid" src="assets/assets/clients/img4.png" alt="">
                 </div>
             </div>
         </div>
@@ -1009,7 +1009,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-3 col-xs-12">
                 <div class="footer-logo">
-                    <img src="assets/img/logo.png" alt="">
+                    <assets src="assets/assets/logo.png" alt="">
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-12">
