--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!-- Main Style -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css"> 
+    <link rel="stylesheet" href="assets/css/responsive.css">
+    <script>window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga("create","UA-194596364-1","auto"),ga("set","anonymizeIp",!0),ga("send","pageview"),document.addEventListener("DOMContentLoaded",function(){document.forms.search&&document.forms.search.query.addEventListener("blur",function(){var e;this.value&&(e=document.location.pathname,ga("send","pageview",e+"?q="+this.value))}),"undefined"!=typeof location$&&location$.subscribe(function(e){ga("send","pageview",e.pathname)})})</script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
 <style>
     iframe{
        /*margin: -20px;*/
