--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/site/">
+                        <a class="nav-link" href="/documentation/">
                             Documentation
                         </a>
                     </li>
