--- a/index.html
+++ b/index.html
@@ -24,17 +24,26 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <script>window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga("create","UA-194596364-1","auto"),ga("set","anonymizeIp",!0),ga("send","pageview"),document.addEventListener("DOMContentLoaded",function(){document.forms.search&&document.forms.search.query.addEventListener("blur",function(){var e;this.value&&(e=document.location.pathname,ga("send","pageview",e+"?q="+this.value))}),"undefined"!=typeof location$&&location$.subscribe(function(e){ga("send","pageview",e.pathname)})})</script>
+    <script>window.ga = window.ga || function () {
+        (ga.q = ga.q || []).push(arguments)
+    }, ga.l = +new Date, ga("create", "UA-194596364-1", "auto"), ga("set", "anonymizeIp", !0), ga("send", "pageview"), document.addEventListener("DOMContentLoaded", function () {
+        document.forms.search && document.forms.search.query.addEventListener("blur", function () {
+            var e;
+            this.value && (e = document.location.pathname, ga("send", "pageview", e + "?q=" + this.value))
+        }), "undefined" != typeof location$ && location$.subscribe(function (e) {
+            ga("send", "pageview", e.pathname)
+        })
+    })</script>
     <script async src="https://www.google-analytics.com/analytics.js"></script>
-<style>
-    iframe{
-       /*margin: -20px;*/
-        width: 100%;
-        height: 360px;
-        margin-top: -50px;
-        overflow: hidden;
-    }
-</style>
+    <style>
+        iframe {
+            /*margin: -20px;*/
+            width: 100%;
+            height: 360px;
+            margin-top: -50px;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
 
@@ -44,7 +53,8 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar" style="    height: 72px;">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo_blue.png" alt="" style="max-height: 45px"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/img/logo_blue.png" alt=""
+                                                           style="max-height: 45px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="lni-menu"></i>
@@ -66,31 +76,31 @@
                             Features
                         </a>
                     </li>
-                   <!-- <li class="nav-item">
-                        <a class="nav-link" href="#team">
-                            Team
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pricing">
-                            Pricing
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolios">
-                            Works
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#testimonial">
-                            Testimonial
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#blog">
-                            Blog
-                        </a>
-                    </li>-->
+                    <!-- <li class="nav-item">
+                         <a class="nav-link" href="#team">
+                             Team
+                         </a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="#pricing">
+                             Pricing
+                         </a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="#portfolios">
+                             Works
+                         </a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="#testimonial">
+                             Testimonial
+                         </a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="#blog">
+                             Blog
+                         </a>
+                     </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">
                             Contact
@@ -113,7 +123,8 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="contents text-center">
-                        <h2 class="head-title wow fadeInUp">The one single DevOps tool <br/> to manage all of your cloud infrastructure</h2>
+                        <h2 class="head-title wow fadeInUp">The one single DevOps tool <br/> to manage all of your cloud
+                            infrastructure</h2>
                         <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                             <a href="#services" class="btn btn-common">Explore</a>
                         </div>
@@ -134,7 +145,7 @@
 <div id="feature">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg" >
+            <div class="col-lg-6 col-md-12 col-sm-12 padding-none feature-bg">
                 <div class="feature-thumb">
                     <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
                         <div class="icon">
@@ -165,8 +176,10 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="text-wrapper">
                     <div>
-                        <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">Be in control of your <br/>cloud footprint</h2>
-                        <p class="mb-4">Our solution takes care of increasing complexity so you can focus on your business.</p>
+                        <h2 class="title-hl wow fadeInLeft" data-wow-delay="0.3s">Be in control of your <br/>cloud
+                            footprint</h2>
+                        <p class="mb-4">Our solution takes care of increasing complexity so you can focus on your
+                            business.</p>
 
                         <a href="#services" class="btn btn-common">See Features</a>
 
@@ -270,20 +283,20 @@
 <!-- Services Section End -->
 
 <!-- Start Video promo Section -->
-<!--<section class="video-promo section-padding" >
+<section class="video-promo section-padding">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 <div class="video-promo-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <a href="https://www.youtube.com/watch?v=yP6kdOZHids" class="video-popup"><i
-                            class="lni-film-play"></i></a>
-                    <h2 class="mt-3 wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Video</h2>
+                    <div style="position:relative;width:100%;height:0;padding-bottom:calc(56.25% + 40px);">
+                        <iframe allowfullscreen style="position:absolute; width: 100%; height: 100%;border: solid 1px #333;left: 0;" src="https://www.beautiful.ai/embed/-Ma_CgNLdMFfi2OP-sH1?utm_source=beautiful_player&utm_medium=embed&utm_campaign=-MaSLTtbBqNaZojuRrsJ"></iframe></div>
+                    <h2 class="mt-3 wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Introduction</h2>
                 </div>
             </div>
         </div>
     </div>
-</section>-->
+</section>
 <!-- End Video Promo Section -->
 
 <!-- Team Section Start -->
@@ -913,46 +926,47 @@
     <div class="container">
         <div class="row contact-form-area wow fadeInUp" data-wow-delay="0.4s">
             <div class="col-md-6 col-lg-6 col-sm-12">
-              <!--  <div class="contact-block">
-                    <form id="contactForm2" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/formResponse">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="name" name="entry.627296906" placeholder="Name"
-                                           required data-error="Please enter your name">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" placeholder="Email" id="email" class="form-control" name="entry.727124915"
-                                           required data-error="Please enter your email">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <input type="text" placeholder="Company Name" id="msg_subject" class="form-control"
-                                           required data-error="Please enter your Company" name="entry.287276731">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-&lt;!&ndash;                                <div class="form-group">&ndash;&gt;
-&lt;!&ndash;                                    <textarea class="form-control" id="message" placeholder="Your Message" rows="5"&ndash;&gt;
-&lt;!&ndash;                                              data-error="Write your message" required></textarea>&ndash;&gt;
-&lt;!&ndash;                                    <div class="help-block with-errors"></div>&ndash;&gt;
-&lt;!&ndash;                                </div>&ndash;&gt;
-                                <div class="submit-button">
-                                    <button class="btn btn-common" id="form-submit" type="submit">Send Message</button>
-                                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>-->
-<!--                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/viewform?embedded=true" width="100%" height="350px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
+                <!--  <div class="contact-block">
+                      <form id="contactForm2" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/formResponse">
+                          <div class="row">
+                              <div class="col-md-6">
+                                  <div class="form-group">
+                                      <input type="text" class="form-control" id="name" name="entry.627296906" placeholder="Name"
+                                             required data-error="Please enter your name">
+                                      <div class="help-block with-errors"></div>
+                                  </div>
+                              </div>
+                              <div class="col-md-6">
+                                  <div class="form-group">
+                                      <input type="text" placeholder="Email" id="email" class="form-control" name="entry.727124915"
+                                             required data-error="Please enter your email">
+                                      <div class="help-block with-errors"></div>
+                                  </div>
+                              </div>
+                              <div class="col-md-12">
+                                  <div class="form-group">
+                                      <input type="text" placeholder="Company Name" id="msg_subject" class="form-control"
+                                             required data-error="Please enter your Company" name="entry.287276731">
+                                      <div class="help-block with-errors"></div>
+                                  </div>
+                              </div>
+                              <div class="col-md-12">
+  &lt;!&ndash;                                <div class="form-group">&ndash;&gt;
+  &lt;!&ndash;                                    <textarea class="form-control" id="message" placeholder="Your Message" rows="5"&ndash;&gt;
+  &lt;!&ndash;                                              data-error="Write your message" required></textarea>&ndash;&gt;
+  &lt;!&ndash;                                    <div class="help-block with-errors"></div>&ndash;&gt;
+  &lt;!&ndash;                                </div>&ndash;&gt;
+                                  <div class="submit-button">
+                                      <button class="btn btn-common" id="form-submit" type="submit">Send Message</button>
+                                      <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                      <div class="clearfix"></div>
+                                  </div>
+                              </div>
+                          </div>
+                      </form>
+                  </div>-->
+                <!--                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdE09i62PSoH5WPZJ7tIZWZ-g6_DFrTvWk09FkU0yr3THKqcQ/viewform?embedded=true" width="100%" height="350px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
+
                 <div class="contact-title">
                     <h1 style="      margin-bottom: 12px;  font-size: 22px;">Contact us</h1>
                 </div>
@@ -977,7 +991,7 @@
                         <h1>We're a friendly bunch..</h1>
                         <p>We help create infrastructure for companies and startups</p>
                     </div>
-<!--                    <h2>Contact Us</h2>-->
+                    <!--                    <h2>Contact Us</h2>-->
                     <div class="contact-right">
                         <!--<div class="single-contact">
                             <div class="contact-icon">
@@ -991,12 +1005,12 @@
                             </div>
                             <p><a href="#">Email: info@facets.cloud</a></p>
                         </div>
-             <!--           <div class="single-contact">
-                            <div class="contact-icon">
-                                <i class="lni-phone-handset"></i>
-                            </div>
-                            <p><a href="#">Phone: +84 846 250 592</a></p>
-                        </div>-->
+                        <!--           <div class="single-contact">
+                                       <div class="contact-icon">
+                                           <i class="lni-phone-handset"></i>
+                                       </div>
+                                       <p><a href="#">Phone: +84 846 250 592</a></p>
+                                   </div>-->
                     </div>
                 </div>
             </div>
