--- a/documentation/index.html
+++ b/documentation/index.html
@@ -545,7 +545,7 @@
 <p>Facets.cloud is built on open standards like Kubernetes, Open Telemetry. It leverages the best of the offerings of the cloud providers by being cloud native and at the same time supports multiple cloud platforms and local development environments.</p>
 <p><img alt="Facetes Principles.png" src="media/Principles.png" /></p>
 <h2 id="about-the-company">About the Company</h2>
-<p>Facets.cloud is an independent entity that is incubated under <a href="https://www.capillarytech.com/">Capillary Technologies</a>, a leading SaaS product in the customer engagement sector. Currently, it manages applications hosted on several thousands of nodes provisioned on AWS public cloud. Facets.cloud has helped in reducing 15% of production issues emerging from automation gaps.</p>
+<p>Facets.cloud manages applications hosted on several thousands of nodes provisioned on AWS public cloud. Facets.cloud has helped in reducing 15% of production issues emerging from automation gaps.</p>
 <p><img alt="Facets Case_Study_.png" src="media/Case_Study_.png" /></p>
                 
               
