--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -8,127 +8,164 @@
     <!-- Bootstrap CSS -->
     <link href="assets2/css/custom.css" rel="stylesheet">
     <title>Facets.cloud</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
-<body>
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32">
-            <use xlink:href="#bootstrap"></use>
-        </svg>
-        <img src="assets2/images/logo.png" style="height:32px"/>
-
-    </a>
-
-    <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#feature" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-    </ul>
-</header>
-<div class="px-4 pt-5 my-5 text-center">
-    <h1 class="display-4 fw-bold">Cloud Engineering Simplified</h1>
+<body data-bs-spy="scroll" data-bs-target="#navbar">
+<nav class="navbar navbar-expand-md navbar-light fixed-top bg-white border-bottom" id="navbar">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="assets2/images/logo.png" style="height:32px"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarCollapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a href="#hero" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="#product" class="nav-link">Product</a></li>
+                <li class="nav-item"><a href="#discover" class="nav-link">Discover</a></li>
+                <li class="nav-item"><a href="/documentation/" class="nav-link">Documentation</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="px-4 pt-5 pb-5 text-center text-white bg-dark" id="hero">
+    <p class="mt-5 text-dark">.</p>
+    <h1 class="display-4 fw-normal mb-5 col-lg-6 mx-auto mt-5">
+        <span style="color: #005EA6; ">Simplified</span> Cloud Delivery of any Software Product </h1>
     <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Collaboration for Cloud Teams
-            <br/> Continuous Delivery of Software Product
-            <br/> Comprehensive Day 2 Operations </p>
-        <p>Give us the opportunity to assess and help in your cloud modernization Journey</p>
+        <!--        <p class="mb-4 invisible">Give us the opportunity to assess and help in your cloud modernization Journey</p>-->
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Take Survey</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Discover</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">See the Demo</button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4 me-sm-3">Start a free trial</button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4">Take Assessment</button>
         </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
-        <div class="container px-5">
-            <img src="assets2/images/login.png" class="img-fluid mb-4" alt="Example image" width="700" height="500"
-                 loading="lazy">
-        </div>
-    </div>
-</div>
-
-<div class="container px-4 py-5 border-top" id="feature">
-    <h2 class="pb-2">Features</h2>
-
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Declarative provisioning </h4>
-                <p>Define your complete infrastructure in easy to write representational language (JSON).</p>
+    <div class="col-lg-9 mx-auto">
+        <div class="row">
+            <div class="lead mb-2 col-lg-4">
+                <i class="bi-cloud-check-fill me-2"></i> Collaboration for Cloud Teams
             </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#cpu-fill"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Continuous Delivery</h4>
-                <p>Define your releases in low traffic time, Integrate your QA suites for automatic qualification. </p>
+            <div class="lead mb-2 col-lg-4">
+                <i class="bi-cloud-check-fill me-2"></i> Continuous Delivery of Software Product
             </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#calendar3"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Optimized cloud spends</h4>
-                <p>Cost consideration while building all modules. Maximize spot usage.</p>
-            </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#home"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Security and compliance</h4>
-                <p>Get out of the box best practices. Backups, Antivirus and OSSEC tools with pre-built dashboards.</p>
-            </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#speedometer2"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Observability and monitoring</h4>
-                <p>Modules are developed with observability first approach. Get pre-defined alerts and dashboards for
-                    all modules.</p>
-            </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#geo-fill"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Multiple clouds</h4>
-                <p>Have one logical definition of your cloud and port it to a local box, AWS, AWS China, or Azure </p>
-            </div>
-        </div>
-        <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                <use xlink:href="#toggles2"></use>
-            </svg>
-            <div>
-                <h4 class="fw-bold mb-0">Extensions and Customizations</h4>
-                <p>Choose among the ready to use utility extensions to enhance your deployments. Get things like ELK for
-                    Logging, Cloudflare Zero Trust Network Access.</p>
+            <div class="lead mb-2 col-lg-4">
+                <i class="bi-cloud-check-fill me-2"></i> Comprehensive Day 2 Operations
             </div>
         </div>
     </div>
 </div>
-<div class="container px-4 py-5 border-top" id="discover">
+
+<div class="album py-5 bg-light" id="product">
+    <div class="container">
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+                <div class="card  border-primary h-100">
+                    <div class="card-header bg-primary text-white py-4">
+                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+                            Collaboration for Cloud Teams</h5>
+                    </div>
+                    <div class="card-body">
+
+                        <p class="card-text">Facilitate collaboration between Application Developers, Cloud operations
+                            Team, NOC Teams, DBAs, Information security teams, Release Teams for your software product
+                            delivery. </p>
+                        <ul class="">
+                            <li class="">Facets.cloud Stack Definition Language (FSDL)</li>
+                            <li class="">Git Based Stack definition and workflow</li>
+                            <li class="">Standard and Custom validations options</li>
+                        </ul>
+                    </div>
+                    <!--                    <div class="card-body">-->
+                    <!--                        <a href="#" class="card-link">Learn more</a>-->
+                    <!--                    </div>-->
+                </div>
+            </div>
+            <div class="col">
+                <div class="card  border-primary h-100">
+                    <div class="card-header bg-primary text-white py-4">
+                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+                            Continuous Delivery of Software Product</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">The FSDL based stack definition can be used to create a completely working
+                            instance of your software product on any cloud through Facets.cloud Control Plane that is
+                            private to your deployment. Additionally, the control plane enables continuous mutations of
+                            the software product. </p>
+
+                        <ul class="">
+                            <li class="">Spin-off and teardown deployments/clusters in minutes</li>
+                            <li class="">Automated scheduled delivery of the entire software product</li>
+                            <li class="">Trigger notifications to QA suites, ChatOps tools and certify the
+                                release automatically/manually
+                            </li>
+                        </ul>
+                    </div>
+                    <!--                    <div class="card-body">-->
+                    <!--                        <a href="#" class="card-link">Learn more</a>-->
+                    <!--                    </div>-->
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-primary h-100">
+                    <div class="card-header bg-primary text-white py-4">
+                        <h5 class="card-title"><i class="bi-cloud-check-fill me-2"></i>
+                            Comprehensive Day 2 Operations</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Facets.cloud Run-time provides a comprehensive suite of tools and processes
+                            to simplify Day 2+ operations. Agents are deployed to reduce the work required for the
+                            management of the underlying cloud and Kubernetes infrastructure of your software product.
+                            Best Practice Policies and guardrails are enforced in a consistent manner across all
+                            deployments. </p>
+
+                        <ul class="">
+                            <li class="">Pre-configured Alerts and Dashboards for Observability and
+                                Compliance
+                            </li>
+                            <li class="">Cloud Agents deployed for various purposes like log collection, spot
+                                management
+                            </li>
+                            <li class="">Extend easily while maintaining the standards using Facets
+                                interfaces
+                            </li>
+                        </ul>
+                    </div>
+                    <!--                    <div class="card-body">-->
+                    <!--                        <a href="#" class="card-link">Learn more</a>-->
+                    <!--                    </div>-->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container px-4 py-5" id="discover">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-7">
             <img src="assets2/images/overview.png" class="d-block mx-lg-auto img-fluid" alt="Facets Explained"
                  height="500" loading="lazy">
         </div>
         <div class="col-lg-5">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Product Highlights</h1>
+            <h1 class="display-5 fw-normal lh-1 mb-3">Product Highlights</h1>
             <p class="lead">We are a cloud automation platform for Developers, InfoSec and DevOps Teams. We
                 simplify provisioning and change management of applications, infrastructure components and databases
                 on multiple cloud platforms.</p>
+            <div class="lead mb-2">
+                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Well Integrated
+            </div>
+            <div class="lead mb-2">
+                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Transparent
+            </div>
+            <div class="lead mb-2">
+                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Extensible
+            </div>
+            <div class="lead mb-2">
+                <i class="bi-check2-circle me-2" style="color: #005EA6"></i> Cloud Native
+            </div>
         </div>
     </div>
 </div>
